Fixed overflow issue at right-side of page

--- a/styles/main.css
+++ b/styles/main.css
@@ -131,6 +131,7 @@ p.button-text {
 html, body {
 	width: 100%;
 	height: 100%;
+	overflow: hidden;
 }
 
 .wrapper {
@@ -199,10 +200,12 @@ nav {
 }
 
 nav ul#main-nav {
-	width: 0px;
+	display: none;
+	width: 0;
 }
 
 nav ul#main-nav.open {
+	display: block;
 	width: 450px;
 }
 
@@ -253,18 +256,30 @@ footer#home-footer {
 
 /* ========== ABOUT ME PAGE ========== */
 
+.wrapper#about-page {
+	z-index: 40;
+}
+
 header#about-header {
 	position: absolute;
 	top: 0;
-	left: 0;
+	overflow: hidden;
 }
 
-.wrapper#about-page {
-	overflow: hidden !important;
+.col-div {
+	width: 40%;
+	height: 100%;
+	float: left;
+}
+
+#col-right {
+	width: 20%;
+	height: 100%;
+	float: left;
 }
 
 .left {
-	width: 40%;
+	width: 100%;
 	height: 50%;
 	float: left;
 }
@@ -276,7 +291,6 @@ header#about-header {
 
 .left#bottom-div {
 	position: relative;
-	top: -50%;
 	background: url(../images/about-bg3.jpg) no-repeat center;
 	background-size: cover;
 }
@@ -293,7 +307,7 @@ video {
 }
 
 .middle-big {
-	width: 40%;
+	width: 100%;
 	height: 100%;
 	float: left;
 	background: url(../images/about-bg2.jpg) no-repeat center;
@@ -301,7 +315,7 @@ video {
 }
 
 .right-tall {
-	width: 20%;
+	width: 100%;
 	height: 100%;
 	float: left;
 }
@@ -347,4 +361,15 @@ ul#social-media li i {
 
 #resume-btn {
 	padding-top: 20px;
+}
+
+.workflow-div {
+	position: absolute;
+	left: 24%;
+	bottom: 0;
+	z-index: 50;
+	width: 600px;
+	height: 650px;
+	background: #ffffff;
+	box-shadow: 24px -1px 44px rgba(0, 0, 0, .6)
 }
